--- a/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
+++ b/SecureWallet/SecureWallet/Resources/layout/show_item_child_adapter.axml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content">
 
   <LinearLayout
+    android:id="@+id/llUserId"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="10dp"
       android:layout_marginLeft="25dp"
@@ -45,6 +46,7 @@
   </LinearLayout>
 
   <LinearLayout
+     android:id="@+id/llPassword"
       android:layout_marginTop="5dp"
       android:layout_marginBottom="10dp"
       android:layout_marginLeft="25dp"
